<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileLocker</string>
    <string name="action_settings">Settings</string>
    <string name="PasswordLabel">EnterPassword</string>
    <string name="fileChooser">ChooseFile</string>
    <string name="lockButton">Lock/Unlock</string>
    <string name="browseButton">Browse</string>
    <string name="closeButton">Close</string>

</resources>
